fix: reposition overlay off-screen

--- a/src/pages/content/modules/overlay.module.sass
+++ b/src/pages/content/modules/overlay.module.sass
@@ -2,6 +2,8 @@ $color: #ef4538
 
 .overlay
   position: fixed
+  left: -1000rem
+  top: -1000rem
   z-index: 2
   padding: .25rem
   margin: 0
